cluster/apps/networking/blocky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blocky-ingress
  namespace: networking
spec:
  tls:
  - hosts:
    - "blocky.${SECRET_DOMAIN}"
    secretName: wildcard-cert-tls
  ingressClassName: "nginx"
  rules:
  - host: blocky.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blocky
            port:
              number: 4000
